visibledetector fixes

--- a/src/css/custom.sass
+++ b/src/css/custom.sass
@@ -1824,3 +1824,8 @@ div.navbar__inner > div:nth-child(1) > div
   .theme-admonition
     max-width: 100%
     width: 100%
+
+@media (max-width: 400px)
+  #__docusaurus > div > div > div > header > div > div > div.nav__wrapper3_src-components-HomepageHeader-styles-module.flex button
+    white-space: nowrap
+    padding: 15px 8px
